; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/linux-v4l2/extr_v4l2-helpers.c_v4l2_enum_dv_timing.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/linux-v4l2/extr_v4l2-helpers.c_v4l2_enum_dv_timing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_dv_timings = type { i32 }

@VIDIOC_ENUM_DV_TIMINGS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @v4l2_enum_dv_timing(i32 %0, %struct.v4l2_dv_timings* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.v4l2_dv_timings*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.v4l2_dv_timings* %1, %struct.v4l2_dv_timings** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @UNUSED_PARAMETER(i32 %7)
  %9 = load %struct.v4l2_dv_timings*, %struct.v4l2_dv_timings** %5, align 8
  %10 = ptrtoint %struct.v4l2_dv_timings* %9 to i32
  %11 = call i32 @UNUSED_PARAMETER(i32 %10)
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @UNUSED_PARAMETER(i32 %12)
  ret i32 -1
}

declare dso_local i32 @UNUSED_PARAMETER(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
